add-explanatory-comments

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </form>
     </div>
   </div>
-
-<script src="./scripts/index.js"></script>
+// оптимизация скрипта с помощью параллельной подгрузки
+<script src="./scripts/index.js" defer></script>
 </body>
 </html>
