--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<button type="button" class="popup__close" data-popupid="popupGallery"></button>
 			<figure class="popup__figure">
 			<img class="popup__img-gallery" src="#" alt="">
-			<figcaption class="popup__figcaption"></figcaption>
+			<figcaption class="popup__figcaption" alt="">nnnn</figcaption>
 			</figure>
 		</div>
 	</div>
