delete button DONE

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<!--Подвал-->
   <footer class="footer">
-    <p class="footer__copyright">&copy;2021 Игорь Теплостанский</p>
+    <p class="footer__copyright">&copy;2021 fd7c6e1f</p>
   </footer>
 
 	<!--Шаблон-->
