--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		</div>
 	</div>
 <!--оптимизация скрипта с помощью параллельной подгрузки-->
-<!--<script src="./scripts/but_hurt.js" defer></script>-->
-<script src="./scripts/index.js" defer></script>
+<script src="./scripts/butthurt.js" defer></script>
+<!--<script src="./scripts/index.js" defer></script>-->
 </body>
 </html>
