--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <button type="button" class="popup__close"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class=" popup__form" name="profile">
-        <input class="popup__input" type="text" name="name" id="popupTitle" placeholder="Имя" value="">
-        <input class="popup__input" type="text" name="description" id="popupDescription" placeholder="Вид деятельности" value="">
+        <input class="popup__input" type="text" name="name" id="popupTitle" placeholder="Имя" value=" ">
+        <input class="popup__input" type="text" name="description" id="popupDescription" placeholder="Вид деятельности" value=" ">
         <button class="popup__button buttons" type="submit">Сохранить</button>
       </form>
     </div>
@@ -92,5 +92,6 @@
 <!--оптимизация скрипта с помощью параллельной подгрузки-->
 <!--<script src="./scripts/butthurt.js" defer></script>-->
 <script src="./scripts/index.js" defer></script>
+<script src="./scripts/initial-cards.js" defer></script>
 </body>
 </html>
