--- a/index.html
+++ b/index.html
@@ -61,10 +61,23 @@
       <button type="button" class="popup__close"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class=" popup__form" name="profile">
-        <input class="popup__input" type="text" name="name" id="popupTitle" placeholder="Имя" value=" ">
-        <input class="popup__input" type="text" name="description" id="popupDescription" placeholder="Вид деятельности" value=" ">
+				<label>
+					<input class="popup__input" type="text" name="name" id="popupTitle" placeholder="Имя" value=" " required maxlength="40" minlength="2">
+					<span id="popupTitle-error" class="popup__error-message"></span>
+				</label>
+				<label>
+					<input class="popup__input" type="text" name="description" id="popupDescription" placeholder="О себе" value=" " required maxlength="200" minlength="2">
+
+					<span id="popupDescription-error" class="popup__error-message"></span>
+				</label>
         <button class="popup__button buttons" type="submit">Сохранить</button>
       </form>
+
+
+
+
+
+
     </div>
   </div>
 
@@ -72,9 +85,11 @@
 		<div class="popup__container">
 			<button type="button" class="popup__close"></button>
 			<h3 class="popup__title">Новое место</h3>
-			<form class=" popup__form" name="profile">
-				<input class="popup__input" type="text" name="place" id="popupNamePlace" placeholder="Название места" required>
+			<form class="popup__form" name="addCard">
+				<input class="popup__input" type="text" name="place" id="popupNamePlace" placeholder="Название места" required maxlength="30" minlength="2">
+				<span class="popup__error-message popup-place-name-error"></span>
 				<input class="popup__input" type="url" name="url" id="popupUrl" placeholder="Ссылка на картинку" required>
+				<span class="popup__error-message popup-place-url-error"></span>
 				<button class="popup__button button" type="submit" data-popupid="popupPlace">Создать</button>
 			</form>
 		</div>
@@ -91,7 +106,10 @@
 	</div>
 <!--оптимизация скрипта с помощью параллельной подгрузки-->
 <!--<script src="./scripts/butthurt.js" defer></script>-->
-<script src="./scripts/index.js" defer></script>
 <script src="./scripts/initial-cards.js" defer></script>
+<script src="./scripts/cards.js" defer></script>
+<script src="./scripts/validation.js" defer></script>
+<script src="./scripts/index.js" defer></script>
+
 </body>
 </html>
