--- a/index.html
+++ b/index.html
@@ -55,20 +55,19 @@
 	</template>
 
 
-	<!--ПопАп-->
+	<!--ПопАпы-->
   <div class="popup" id="popupEditProfile">
     <div class="popup__container">
       <button type="button" class="popup__close"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class=" popup__form" name="profile">
+      <form class="popup__form" name="profile" novalidate>
 				<label>
-					<input class="popup__input" type="text" name="name" id="popupTitle" placeholder="Имя" value=" " required maxlength="40" minlength="2">
-					<span id="popupTitle-error" class="popup__error-message"></span>
+					<input class="popup__input" type="text" name="name" id="popup-profile-title" placeholder="Имя" value=" " required maxlength="40" minlength="2">
+					<span class="popup__error-message popup-profile-title-error"></span>
 				</label>
 				<label>
-					<input class="popup__input" type="text" name="description" id="popupDescription" placeholder="О себе" value=" " required maxlength="200" minlength="2">
-
-					<span id="popupDescription-error" class="popup__error-message"></span>
+					<input class="popup__input" type="text" name="description" id="popup-profile-description" placeholder="О себе" value=" " required maxlength="200" minlength="2">
+					<span class="popup__error-message popup-profile-description-error"></span>
 				</label>
         <button class="popup__button button" type="submit">Сохранить</button>
       </form>
@@ -79,11 +78,15 @@
 		<div class="popup__container">
 			<button type="button" class="popup__close"></button>
 			<h3 class="popup__title">Новое место</h3>
-			<form class="popup__form" name="addCard">
-				<input class="popup__input" type="text" name="place" id="popupNamePlace" placeholder="Название места" required maxlength="30" minlength="2">
-				<span class="popup__error-message popup-place-name-error"></span>
-				<input class="popup__input" type="url" name="url" id="popupUrl" placeholder="Ссылка на картинку" required>
-				<span class="popup__error-message popup-place-url-error"></span>
+			<form class="popup__form" name="addCard" novalidate>
+				<label>
+					<input class="popup__input" type="text" name="place" id="popup-place-name" placeholder="Название места" required maxlength="30" minlength="2">
+					<span class="popup__error-message popup-place-name-error"></span>
+				</label>
+				<label>
+					<input class="popup__input" type="url" name="url" id="popup-place-url" placeholder="Ссылка на картинку" required>
+					<span class="popup__error-message popup-place-url-error"></span>
+				</label>
 				<button class="popup__button button" type="submit" data-popupid="popupPlace">Создать</button>
 			</form>
 		</div>
@@ -94,7 +97,7 @@
 			<button type="button" class="popup__close" id="popupGallery"></button>
 			<figure class="popup__figure">
 			<img class="popup__img-gallery" src="#" alt="">
-			<figcaption class="popup__figcaption" alt="">nnnn</figcaption>
+			<figcaption class="popup__figcaption" alt=""></figcaption>
 			</figure>
 		</div>
 	</div>
