--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	</div>
 <!--оптимизация скрипта с помощью параллельной подгрузки-->
 <script src="./scripts/initial-cards.js" defer></script>
-<script src="./scripts/validation.js" defer></script>
+<script src="./scripts/validate.js" defer></script>
 <script src="./scripts/index.js" defer></script>
 
 </body>
