--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 					<span class="popup__error-message popup-place-name-error"></span>
 					<input class="popup__input" type="url" name="url" id="popup-place-url" placeholder="Ссылка на картинку" required>
 					<span class="popup__error-message popup-place-url-error"></span>
-				<button class="popup__button button" type="submit" id="popupPlace">Создать</button>
+				<button class="popup__button button" type="submit">Создать</button>
 			</form>
 		</div>
 	</div>
 
 	<div class="popup" id="popupGallery">
 		<div class="popup__gallery">
-			<button type="button" class="popup__close" id="popupGallery"></button>
+			<button type="button" class="popup__close"></button>
 			<figure class="popup__figure">
 			<img class="popup__img-gallery" src="#" alt="">
 			<figcaption class="popup__figcaption" alt=""></figcaption>
