--- a/index.html
+++ b/index.html
@@ -93,10 +93,8 @@
 			</figure>
 		</div>
 	</div>
-<!--оптимизация скрипта с помощью параллельной подгрузки-->
-<script src="./scripts/initial-cards.js" defer></script>
-<script src="./scripts/validate.js" defer></script>
-<script src="./scripts/index.js" defer></script>
-
+<script src="./scripts/initial-cards.js"></script>
+<script src="./scripts/index.js"></script>
+<script src="./scripts/validate.js"></script>
 </body>
 </html>
