--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
 			</figure>
 		</div>
 	</div>
+<script src="./scripts/Card.js"></script>
 <script src="./scripts/initial-cards.js"></script>
-<script src="./scripts/index.js"></script>
 <script src="./scripts/validate.js"></script>
+<script src="./scripts/index.js"></script>
 </body>
 </html>
