--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
 			</figure>
 		</div>
 	</div>
-<script src="./scripts/Card.js"></script>
+<!--<script src="./scripts/Card.js"></script>
 <script src="./scripts/initial-cards.js"></script>
 <script src="./scripts/validate.js"></script>
-<script src="./scripts/index.js"></script>
+<script src="./scripts/index.js"></script>-->
+<script type="module" src="scripts/index.js"></script>
 </body>
 </html>
