refactor: Внести правки указанные в ревью (UPD:11/11 14:39)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </footer>
 
 	<!--Шаблон-->
-	<template id="templateForCard">
+	<template class="templateForCard">
 		<li class="card">
 			<button type="button" class="card__delete-button buttons"></button>
 			<img class="card__img" src="#" alt="">
@@ -93,10 +93,6 @@
 			</figure>
 		</div>
 	</div>
-<!--<script src="./scripts/Card.js"></script>
-<script src="./scripts/initial-cards.js"></script>
-<script src="./scripts/validate.js"></script>
-<script src="./scripts/index.js"></script>-->
 <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
