add: Добавить favicon и модуль Section [20/11 01:43]

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
+	<link rel="icon" href="./images/icons8.svg" type="image/x-icon">
   <title>Место</title>
 </head>
 <body class="page">
