refactor: Разбить структуру index.js на отдельные модули [21/11 05:54]

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <button type="button" class="popup__close"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="profile" novalidate>
-					<input class="popup__input" type="text" name="name" id="popup-profile-title" placeholder="Имя" value=" " required maxlength="40" minlength="2">
+					<input class="popup__input popup__input_name" type="text" name="name" id="popup-profile-title" placeholder="Имя" value=" " required maxlength="40" minlength="2">
 					<span class="popup__error-message popup-profile-title-error"></span>
-					<input class="popup__input" type="text" name="description" id="popup-profile-description" placeholder="О себе" value=" " required maxlength="200" minlength="2">
+					<input class="popup__input popup__input_description" type="text" name="description" id="popup-profile-description" placeholder="О себе" value=" " required maxlength="200" minlength="2">
 					<span class="popup__error-message popup-profile-description-error"></span>
         <button class="popup__button button" type="submit">Сохранить</button>
       </form>
