--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,15 @@
 
 		<!--Профиль-->
     <section class="profile">
-      <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватарка">
+			<div class="profile__img-wrapper"></div>
+      	<img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватарка">
+			</div>
       <div class="profile__info">
         <div class="profile__main-info">
-          <h1 class="profile__name"></h1>
+          <h1 class="profile__name">nn</h1>
           <button type="button" class="profile__edit-button buttons"></button>
         </div>
-        <p class="profile__description"></p>
+        <p class="profile__description">nnn</p>
       </div>
       <button type="button" class="profile__add-button buttons"></button>
     </section>
@@ -91,6 +93,30 @@
 			<img class="popup__img-gallery" src="#" alt="">
 			<figcaption class="popup__figcaption" alt=""></figcaption>
 			</figure>
+		</div>
+	</div>
+
+	<div class="popup" id="popup-confirmation">
+		<div class="popup__container">
+			<button type="button" class="popup__close" data-popupid="popup-confirmation"></button>
+			<h3 class="popup__title">Вы уверены?</h3>
+			<form class="popup__form" name="confirmation">
+				<button class="popup__button button" type="submit" data-popupid="popup-confirmation">Да</button>
+			</form>
+		</div>
+	</div>
+
+	<div class="popup" id="popup-change-avatar">
+		<div class="popup__container">
+			<button type="button" class="popup__close" data-popupid="popup-change-avatar"></button>
+			<h3 class="popup__title"> Обновить аватар</h3>
+			<form class=" popup__form" name="changeAvatar">
+				<label>
+					<input class="popup__input" type="url" name="avatar" id="popup-change-avatar-url" placeholder="Ссылка на картинку" required>
+					<span class="popup__error-message popup-change-avatar-url-error"></span>
+				</label>
+				<button class="popup__button button" type="submit" data-popupid="popup-change-avatar">Сохранить</button>
+			</form>
 		</div>
 	</div>
 <!--<script type="module" src="scripts/index.js"></script>-->
