как же я устал уже [28/11 17:58]

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
 		<!--Профиль-->
     <section class="profile">
-			<div class="profile__img-wrapper"></div>
+			<div class="profile__img-wrapper">
       	<img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Аватарка">
 			</div>
       <div class="profile__info">
