--- a/src/index.html
+++ b/src/index.html
@@ -96,19 +96,19 @@
 		</div>
 	</div>
 
-	<div class="popup" id="popup-confirmation">
+	<div class="popup" id="popupConfirmation">
 		<div class="popup__container">
 			<button type="button" class="popup__close" data-popupid="popup-confirmation"></button>
 			<h3 class="popup__title">Вы уверены?</h3>
 			<form class="popup__form" name="confirmation">
-				<button class="popup__button button" type="submit" data-popupid="popup-confirmation">Да</button>
+				<button class="popup__button button" type="submit" data-popupid="popupConfirmation">Да</button>
 			</form>
 		</div>
 	</div>
 
-	<div class="popup" id="popup-change-avatar">
+	<div class="popup" id="popupChangAvatar">
 		<div class="popup__container">
-			<button type="button" class="popup__close" data-popupid="popup-change-avatar"></button>
+			<button type="button" class="popup__close" data-popupid="popupChangAvatar"></button>
 			<h3 class="popup__title"> Обновить аватар</h3>
 			<form class=" popup__form" name="changeAvatar">
 				<label>
