style: Исправить ошибку [28/11 18:15]

--- a/src/index.html
+++ b/src/index.html
@@ -106,9 +106,9 @@
 		</div>
 	</div>
 
-	<div class="popup" id="popupChangAvatar">
+	<div class="popup" id="popupChangeAvatar">
 		<div class="popup__container">
-			<button type="button" class="popup__close" data-popupid="popupChangAvatar"></button>
+			<button type="button" class="popup__close" data-popupid="popupChangeAvatar"></button>
 			<h3 class="popup__title"> Обновить аватар</h3>
 			<form class=" popup__form" name="changeAvatar">
 				<label>
